add routes: address, province, district, ward and create scripts for full Viet Name location data

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test-scripts": "ts-node initSeedData/test.ts",
     "create:base-data": "ts-node initSeedData/create-base-data.ts",
     "create:permissions": "ts-node initSeedData/create-permissions.ts",
+    "create:locations": "ts-node initSeedData/create-locations.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
